fix title on mobile screen; fix iOS issue;

--- a/client/app/containers/test-run-info/test-video-slider/test-video-slider.scss
+++ b/client/app/containers/test-run-info/test-video-slider/test-video-slider.scss
@@ -12,7 +12,7 @@
         cursor: pointer;
         position: absolute;
         top: 50%;
-        transform: translateY(-50%);
+        transform: translate3d(0, -50%, 1);
         background: #FFFFFF;
         box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2), 0 3px 3px rgba(0, 0, 0, 0.12), 0 3px 4px rgba(0, 0, 0, 0.14);
         border-radius: 4px;
